# reflectance-models

./: .envrc  .gitignore  README.md  devenv.nix  flake.nix  mkdocs.yml  pyproject.toml
.github/workflows/: flake.yml  sphinx.yml
docs/: index.md  library.bib
docs/source/: amsa_model.md  conf.py  h_functions.md  hapke_overview.md  imsa_model.md  legendre_polynomials.md  library.bib  phase_functions.md  references.md  refs.bib  roughness_correction.md
docs/source/autoapi/refmod/: index.rst
docs/source/autoapi/refmod/hapke/: index.rst
docs/source/autoapi/refmod/hapke/amsa/: index.rst
docs/source/autoapi/refmod/hapke/functions/: index.rst
docs/source/autoapi/refmod/hapke/imsa/: index.rst
docs/source/hapke/: amsa.md  imsa.md
refmod/: __init__.py  config.py  hapke-oop.py  inverse.py
refmod/hapke/: __init__.py  amsa.py  functions.py  imsa.py  inverse.py  legendre.py  mimsa.py  models.py  roughness.py
refmod/hapke/functions/: h.py  legendre.py  phase.py  roughness.py  vectors.py
refmod/lumba/: __init__.py
test/: test_hapke.py  test_hapke.py.bak  test_inverse.py
