[project]
name = "refmod"
version = "0.1.0"
description = "Reflectance models in python"
authors = [{ name = "Mirza Arnaut", email = "mirza.arnaut@tu-dortmund.de" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=2.1",
    "scipy>=1.15.3",
]
[project.optional-dependencies]
jax = [
  "jax>=0.6.1",
  "optimistix>=0.0.10",
  "jaxtyping>=0.3.2",
  # "jax-cuda12-plugin>=0.6.1",
]
numba = ["numba>=0.61.0"]

[dependency-groups]
test = [
  "astropy>=6.0.0",
  #"coverage>=7.4.1",
  "pytest>=8.0.0",
  #"pytest-cov>=4.1.0",
  # "streamlit>=1.36.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.28",
  "mkdocstrings>=0.25.1",
  "mkdocs-autorefs>=1.0.1",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-section-index>=0.3.9",
  "mkdocs-awesome-pages-plugin>=2.9.2",
  "mkdocs-bibtex>=2.16.0",
]
profiling = [
  "py-spy>=0.4.0",
  "tensorboard>=2.19.0",
  "tensorboard-plugin-profile>=2.19.5",
  "tensorflow>=2.19.0",
]

[tool.ruff]
lint.ignore = ["F722"]

[tool.pytest.ini_options]
python_files = "test/test_*.py"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["refmod"]
# exclude = []
# namespace = false

[tool.setuptools]
packages = ["refmod"]
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[semantic_release]
version_variable = ["refmod/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version:nf"]
major_on_zero = false
branch = "main"
build_command = "curl -LsSf https://astral.sh/uv/install.sh | sh && source $HOME/.local/bin/env && uv build"
